samples/_failures_safe/1761277939_485b34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e4abcfe.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0e4abcfe.c:166:13: error: expected declaration or statement at end of input
  166 |             read_string(lexer);
      |             ^~~~~~~~~~~
./samples/SAFE/__tmp_0e4abcfe.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e4abcfe.c:166:13: error: expected declaration or statement at end of input
